cmake_minimum_required(VERSION 3.30)
project(leetcode VERSION 0.1.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)
set(CMAKE_DEBUG_POSTFIX "-d")
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

file(GLOB JAN_SOURCES src/jan/*.cpp)
file(GLOB FEB_SOURCES src/feb/*.cpp)
file(GLOB MARCH_SOURCES src/march/*.cpp)
file(GLOB APRIL_SOURCES src/april/*.cpp)
file(GLOB MAY_SOURCES src/may/*.cpp)
file(GLOB JUNE_SOURCES src/june/*.cpp)
file(GLOB JULY_SOURCES src/july/*.cpp)
file(GLOB AUG_SOURCES src/aug/*.cpp)
file(GLOB SEP_SOURCES src/sep/*.cpp)
file(GLOB OCT_SOURCES src/oct/*.cpp)
file(GLOB NOV_SOURCES src/nov/*.cpp)
file(GLOB DEC_SOURCES src/dec/*.cpp)

add_executable(leetcode src/main.cpp ${JAN_SOURCES} ${FEB_SOURCES})
